Fix PMD violations across 17 source files
- AvoidFileStream (22): replaced all new FileInputStream / FileOutputStream
  with Files.newInputStream / newOutputStream throughout BwEarMojo,
  Bw5ModuleMojo, InitMojo, RunBwMojo, SiteHtmlGenerator, SiteMarkdown
  Generator, SitePdfGenerator, PullMojo, DesignTimeLibsParser, ManifestBw5
  Generator, InitMojo
- LiteralsFirstInComparisons (12): flipped var.equals("lit") to "lit".equals(var)
  across ProcessDocParser, BwEarMojo, Bw5ModuleMojo, InitMojo, SiteHtmlGenerator
- MissingOverride (3): added @Override to AnyPrefixNamespaceContext in ValidateMojo
- UnusedImports (3): removed Filters, XPathFactory from ProcessDocParser;
  FileUtils from BwEarMojo
- UnusedPrivateField (2): removed endX, endY from ProcessDocModel.Activity
- UnusedAssignment (2): removed redundant field initializers in SiteHtmlGenerator
- UnusedLocalVariable (1): removed unused ct in SiteHtmlGenerator
- CompareObjectsWithEquals (2): suppressed with @SuppressWarnings where == is
  intentional identity check (element and model identity)
- InefficientEmptyStringCheck (5): replaced trim().isEmpty() with isBlank()
  in InitMojo
- OneDeclarationPerLine (7): split multi-variable declarations in SiteHtmlGenerator,
  SitePdfGenerator, SvgDiagramGenerator
- UseStringBufferForStringAppends (1): converted += loop to StringBuilder
  in SiteMarkdownGenerator
- AvoidReassigningParameters (2): introduced local normalizedName in addToZip
  methods in BwEarMojo and Bw5ModuleMojo
- RedundantFieldInitializer (2): removed = 0 from ProcessDocParser.chooseCounter
  and SiteHtmlGenerator.MTreeNode.branchId
- UnusedFormalParameter (8): suppressed with @SuppressWarnings where parameter
  is required by interface or recursion signature
- AvoidUsingHardCodedIP (1): suppressed in getSdkVersionFourPart (false positive
  on version string "1.0")
- AvoidFieldNameMatchingMethodName (1): renamed field launchDesigner to
  shouldLaunchDesigner in PullMojo